Standardize REST API routes
